@@ -1,6 +1,6 @@
 Package: lattice
 Version: 0.18-4
-Date: 2010/03/26
+Date: 2010/03/29
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
